refactor: configurability updates and rebranding to DrawBookAI

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # API Key for Anthropic/Gemini
-ANTSK_API_KEY=your_api_key_here
+ANTSK_API_KEY=sk-C7RASB9DXaBRu1vTFXzy8w6j1l3TSvKNYfN9ZFJMeYsoTO1Q
+ALL_API_BASE=https://api.antsk.cn
+# Optional: Separate API URLs for different services (will fallback to ALL_API_BASE if not set)
+# USE_GLOBAL_API=true
+# TEXT_API_BASE=
+# IMAGE_API_BASE=
+# VIDEO_API_BASE=
